--- a/ChatProjectNetWork/ChatProjectNetWork.vcxproj.filters
+++ b/ChatProjectNetWork/ChatProjectNetWork.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClInclude Include="StatusConPool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="data.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="message.proto">
