--- a/ChatProjectNetWork/ChatProjectNetWork.vcxproj
+++ b/ChatProjectNetWork/ChatProjectNetWork.vcxproj
@@ -170,6 +170,7 @@ xcopy "$(ProjectDir)*.dll"   "$(SolutionDir)$(Platform)\$(Configuration)\"   /y<
     <ClInclude Include="ConfigMgr.h" />
     <ClInclude Include="CServer.h" />
     <ClInclude Include="const.h" />
+    <ClInclude Include="data.h" />
     <ClInclude Include="MySqlMgr.h" />
     <ClInclude Include="StatusConPool.h" />
     <ClInclude Include="StatusGrpcClient.h" />
