--- a/ChatServer/ChatServer.vcxproj
+++ b/ChatServer/ChatServer.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -150,6 +150,7 @@ xcopy "$(ProjectDir)*.dll"   "$(SolutionDir)$(Platform)\$(Configuration)\"   /y<
   <ItemGroup>
     <ClCompile Include="AsioIOServicePool.cpp" />
     <ClCompile Include="ChatServer.cpp" />
+    <ClCompile Include="ChatServiceImpl.cpp" />
     <ClCompile Include="ConfigMgr.cpp" />
     <ClCompile Include="CServer.cpp" />
     <ClCompile Include="CSession.cpp" />
@@ -162,9 +163,11 @@ xcopy "$(ProjectDir)*.dll"   "$(SolutionDir)$(Platform)\$(Configuration)\"   /y<
     <ClCompile Include="RedisMgr.cpp" />
     <ClCompile Include="StatusConPool.cpp" />
     <ClCompile Include="StatusGrpcClient.cpp" />
+    <ClCompile Include="UserMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsioIOServicePool.h" />
+    <ClInclude Include="ChatServiceImpl.h" />
     <ClInclude Include="ConfigMgr.h" />
     <ClInclude Include="const.h" />
     <ClInclude Include="CServer.h" />
@@ -180,6 +183,8 @@ xcopy "$(ProjectDir)*.dll"   "$(SolutionDir)$(Platform)\$(Configuration)\"   /y<
     <ClInclude Include="Singleton.hpp" />
     <ClInclude Include="StatusConPool.h" />
     <ClInclude Include="StatusGrpcClient.h" />
+    <ClInclude Include="UserMgr.h" />
+    <ClInclude Include="Utility.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="config.ini" />
