--- a/ChatServer/ChatServer.vcxproj.filters
+++ b/ChatServer/ChatServer.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="StatusConPool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ChatServiceImpl.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UserMgr.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsioIOServicePool.h">
@@ -105,6 +111,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="StatusConPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ChatServiceImpl.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UserMgr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
