--- a/ChatServer/config.ini
+++ b/ChatServer/config.ini
@@ -7,9 +7,10 @@ Port = 50051
 Host = 127.0.0.1
 Port = 50052
 [SelfServer]
-Name = ChatServer2
-Host = 0.0.0.0
-Port = 8091
+Name = ChatServer1
+Host = 127.0.0.1
+Port = 8090
+RPCPort = 50055
 [Mysql]
 Host = 127.0.0.1
 Port = 3306
@@ -20,9 +21,9 @@ Schema = chat
 Host = 127.0.0.1
 Port = 6380
 Passwd = 123456
-[ChatServer1]
-Host = 127.0.0.1
-Port = 8090
+[PeerServer]
+Server = ChatServer2
 [ChatServer2]
+Name = ChatServer2
 Host = 127.0.0.1
-Port = 8091
+Port = 50056
