--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -17,8 +17,10 @@ Host = 127.0.0.1
 Port = 6380
 Passwd = 123456
 [ChatServer1]
+Name = ChatServer1
 Host = 127.0.0.1
 Port = 8090
 [ChatServer2]
+Name = ChatServer2
 Host = 127.0.0.1
 Port = 8091
